# mirror

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DAILY_LOG.md  DEVELOPMENT_LOG.md  LICENSE  PROJECT_TODO.md  README.md  TODO.md  build-all.sh  setup-gradle.sh
mirror-core/: Cargo.toml  build.rs
mirror-core/src/: lib.rs
mirror-core/src/audio/: decoder.rs  encoder.rs  mod.rs
mirror-core/src/crypto/: mod.rs  session.rs
mirror-core/src/jni_bridge/: mod.rs
mirror-core/src/network/: demux.rs  mod.rs  mux.rs
mirror-core/src/video/: decoder.rs  encoder.rs  mod.rs
mirror-host/: build.gradle.kts  settings.gradle.kts
mirror-host/app/: build.gradle.kts
mirror-host/app/src/main/: AndroidManifest.xml
mirror-host/app/src/main/java/com/mirror/host/: MainActivity.kt  MirrorHostApplication.kt
mirror-host/app/src/main/res/layout/: activity_audio_monitor.xml  activity_device_pairing.xml  activity_gallery_browser.xml  activity_live_camera.xml  activity_main.xml  activity_screen_mirror.xml  activity_settings.xml
mirror-host/app/src/main/res/menu/: bottom_nav_menu.xml
mirror-host/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
mirror-signaling/: Cargo.toml
mirror-signaling/src/: main.rs
mirror-target/: build.gradle.kts  settings.gradle.kts
mirror-target/app/: build.gradle.kts
mirror-target/app/src/main/: AndroidManifest.xml
mirror-target/app/src/main/res/layout/: activity_main.xml  activity_pairing.xml  activity_setup.xml
mirror-target/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
(+14 files in other folders)
