[package]
name = "mirror-core"
version = "0.1.0"
edition = "2021"
authors = ["Mirror Team"]
description = "Core Rust library for Mirror surveillance app"
license = "MIT"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# JNI bindings for Android
jni = "0.21"

# Logging
log = "0.4"
android_logger = "0.14"

# Cryptography
ring = "0.17"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
