[package]
name = "mirror-signaling"
version = "0.1.0"
edition = "2021"
authors = ["Mirror Team"]
description = "Optional signaling server for Mirror app"
license = "MIT"

[[bin]]
name = "mirror-signaling"
path = "src/main.rs"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"

# WebSocket support
tokio-tungstenite = "0.21"
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
